--- a/ics_tool/templates/ics_tool/add_donor.html
+++ b/ics_tool/templates/ics_tool/add_donor.html
@@ -70,7 +70,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Submit Feedback</a>
+                        <a href="/feedback"><i class="fa fa-fw fa-file"></i> Submit Feedback</a>
                     </li>
                 </ul>
             </div>
