--- a/ics_tool/templates/ics_tool/donor_success.html
+++ b/ics_tool/templates/ics_tool/donor_success.html
@@ -64,7 +64,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Submit Feedback</a>
+                        <a href="/feedback"><i class="fa fa-fw fa-file"></i> Submit Feedback</a>
                     </li>
                 </ul>
             </div>
